--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -60,6 +60,21 @@
         <div id='container'>
             <div class='notification'>
                 <table class='notiTable'>
+                    <tr><td><h2>設定ページの作成</h2><small>2024/03/13</small></td></tr>
+                    <tr><td><p>
+                        Cookieの削除などができます。
+                        <br>
+                        右上の歯車のアイコンをクリックするとアクセスできます。
+                        <br>
+                        設定ページは<a href='https://lego0821.github.io/lego0821/pages/setting/'>こちら</a>
+                    </p></td></tr>
+                </table>
+            </div>
+        </div>
+        
+        <div id='container'>
+            <div class='notification'>
+                <table class='notiTable'>
                     <tr><td><h2>ディレクトリの変更</h2><small>2024/02/21</small></td></tr>
                     <tr><td><p>
                         ページのURLを更新しています。
