--- a/pages/productions/index.html
+++ b/pages/productions/index.html
@@ -69,6 +69,13 @@
         ミニゲーム2</a>
         <p class='detail'>敵をよけて進み、高得点を目指しましょう。</p>
       </div>
+      <div class='card'>
+        <a href='https://lego0821.github.io/lego0821/pages/project/#5'>
+        <img src='https://lego0821.github.io/lego0821/image/大戦争ゲーム.png' alt='ミニゲーム2'>
+        <br>
+        大戦争ゲーム</a>
+        <p class='detail'>見方を召喚して敵城を攻撃するゲームです。</p>
+      </div>
     </div>
   </body>
 </html>
