--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -60,6 +60,21 @@
         <div id='container'>
             <div class='notification'>
                 <table class='notiTable'>
+                    <tr><td><h2>大戦争ゲーム</h2><small>2024/05/22</small></td></tr>
+                    <tr><td><p>
+                        大戦争ゲームをアップロードしました。
+                        <br>
+                        <a href='https://lego0821.github.io/projects/big war game/'>プレイ</a>
+                        <br>
+                       <a href='https://lego0821.github.io/lego0821/projects/#5'>紹介ページ</a>
+                    </p></td></tr>
+                </table>
+            </div>
+        </div>
+        <br>
+        <div id='container'>
+            <div class='notification'>
+                <table class='notiTable'>
                     <tr><td><h2>設定ページの作成</h2><small>2024/03/13</small></td></tr>
                     <tr><td><p>
                         Cookieの削除などができます。
