--- a/pages/setting/index.html
+++ b/pages/setting/index.html
@@ -71,7 +71,7 @@
                 location.href = `https://lego0821.github.io/lego0821/${document.getElementById('jumpToURL').value}`;
             }
             document.getElementById('jump').addEventListener('click',JTU);
-            document.getElementById('jumpTOURL').addEventListener('keyDown',(e) => {
+            document.getElementById('jumpToURL').addEventListener('keyDown',(e) => {
                 if(e.key === 'Enter'){
                     JTU();
                 }
