--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <h1 id="myName">lego0821</h1>
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
         <div class='card'>
-            <h2> 私のお気に入り</h2>
-            <a href='https://lego0821.github.io/lego0821/pages/project/#0'>
-                <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='thumbnail' style='height: 150px;width: 200px'>
+            <h2> 最近共有したもの</h2>
+            <a href='https://lego0821.github.io/lego0821/pages/project/#6'>
+                <img src='https://lego0821.github.io/lego0821/image/ビル経営ゲーム.png' alt='thumbnail' style='height: 150px;width: 200px'>
                 <p>オンライン広場</p>
             </a>
             <p>
@@ -85,6 +85,14 @@
                 <br>
                 ミニゲーム2</a>
                 <p class='detail'>敵をよけて進み、高得点を目指しましょう。</p>
+            </div>
+            
+            <div class='card'>
+                <a href='https://lego0821.github.io/lego0821/pages/project/#6'>
+                <img src='https://lego0821.github.io/lego0821/image/ビル経営ゲーム.png' alt='ビル経営ゲーム'>
+                <br>
+                ビル経営ゲーム</a>
+                <p class='detail'>店を増やし、部屋を作り、ビルを発展させましょう!</p>
             </div>
         </div>
         <a href='#' class='animation' id='top'>
