--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <h2> 最近共有したもの</h2>
             <a href='https://lego0821.github.io/lego0821/pages/project/#6'>
                 <img src='https://lego0821.github.io/lego0821/image/ビル経営ゲーム.png' alt='thumbnail' style='height: 150px;width: 200px'>
-                <p>オンライン広場</p>
+                <p>ビル経営ゲーム</p>
             </a>
             <p>
-                オンラインで最大5人までプレイできるオンラインゲームです
+                店を増やし、部屋を作り、ビルを発展させるゲームです。
             </p>
         </div>
         <h2>私の作品</h2>
