--- a/pages/productions/index.html
+++ b/pages/productions/index.html
@@ -28,7 +28,7 @@
   <body>
     <nav>
         <ul>
-            <li><a href="https://lego0821.github.io/lego0821/lego0821" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
+            <li><a href="https://lego0821.github.io/lego0821/" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
             <li id='navigations'><a href="https://lego0821.github.io/lego0821/pages/productions/" class='navs'>作品</a><a href="https://lego0821.github.io/lego0821/pages/notification/" class='navs'>通知</a></li>
         </ul>
     </nav>
@@ -77,5 +77,6 @@
         <p class='detail'>見方を召喚して敵城を攻撃するゲームです。</p>
       </div>
     </div>
+    <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
   </body>
 </html>
