--- a/pages/productions/index.html
+++ b/pages/productions/index.html
@@ -23,6 +23,9 @@
         background-color: #fff;
         box-shadow: 10px 10px 10px #93da93;
       }
+      footer{
+        background-color: #aaa;
+      }
     </style>
   </head>
   <body>
@@ -77,6 +80,9 @@
         <p class='detail'>見方を召喚して敵城を攻撃するゲームです。</p>
       </div>
     </div>
+    <footer>
+      <p>このサイトの評価をお願いします <a href='https://docs.google.com/forms/d/e/1FAIpQLSfwAHv_0zoKf2OBtWwlTffRDzoQpNm24L4KJAlLfPXanwpV5Q/viewform?usp=sf_link'>評価</a></p>
+    </footer>
     <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
   </body>
 </html>
