--- a/pages/productions/index.html
+++ b/pages/productions/index.html
@@ -25,6 +25,10 @@
       }
       footer{
         background-color: #aaa;
+        min-height: 100px;
+      }
+      footer p{
+        color: white;
       }
     </style>
   </head>
