--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                 border-radius: 10px;
                 border: 2px solid gray;
             }
+            footer{
+                background-color: #aaa;
+                min-height: 100px;
+                text-align: center;
+              }
+              footer p{
+                color: white;
+              }
         </style>
     </head>
     <body>
@@ -98,6 +106,9 @@
         <a href='#' class='animation' id='top'>
             ▲TOP
         </a>
+        <footer>
+            <p>このサイトの評価をお願いします <a href='https://docs.google.com/forms/d/e/1FAIpQLSfwAHv_0zoKf2OBtWwlTffRDzoQpNm24L4KJAlLfPXanwpV5Q/viewform?usp=sf_link'>評価</a></p>
+        </footer>
         <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
     </body>
 </html>
